css/styles.css
body {
  background: url("../images/blush-no-bloom.png") rgb(0, 0, 0) no-repeat center center fixed;
  background-size: contain;
  background-position-y: 40%;
  position: relative;
  padding-bottom: 68px;
}

.anime-watchers {
  margin: 15px 10px 10px 10px;
  align-items: center;
}

.row {
  display: flex;
}

.column {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.justify-center {
  justify-content: center;
}

.justify-around {
  justify-content: space-around;
}

.justify-even {
  justify-content: space-evenly;
}

.tint {
  width: 100%;
  height: 90vh;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
}

.headline-container {
  position: relative;
  margin: auto;
  text-align: center;
}

.header-container {
  background-color: #232323;
  font-family: 'Luckiest Guy', sans-serif;
  color: #6f6f6f;
  border-bottom: 1px solid #cceabb;
  width: 100%;
}

.form-row {
  width: 100%;
  margin: auto;
  height: 60vh;
}

.footer-container {
  background-color: #232323;
  font-family: 'Luckiest Guy', sans-serif;
  color: #6f6f6f;
  border-top: 1px solid #cceabb;
  width: 100%;
  position: fixed;
  left: 0;
  bottom: 0;
}

.headline {
  color: #6f6f6f;
  font-family: 'PT Sans', sans-serif;
}

.aw-logo {
  margin-left: 10px;
  transition: 0.3s;
}

.logo {
  margin-left: 10px;
  transition: 0.3s;
}

.genre-select {
  background-color: #c4c4c4;
  color: black;
  padding: 10px 15px;
  font-family: 'Luckiest Guy', sans-serif;
  border-radius: 3px;
  border: none;
  font-size: 15px;
  margin-right: 10px;
}

.click-me {
  font-family: 'Luckiest Guy', sans-serif;
  color: black;
  background-color: #c4c4c4;
  padding: 10px 25px;
  border-radius: 3px;
  border: none;
  font-size: 15px;
}

.height {
  height: 53vh;
}

.hidden {
  display: none;
}

.results-container {
  background-color: #4d4d4d;
  opacity: 0.8;
  margin: 15px auto;
  width: 90%;
  height: 85vh;
  border-radius: 5px;
}

.img-result {
  border-radius: 5px;
  margin-right: 15px;
  margin-top: 5px;
}

.results-row {
  align-items: center;
  height: 65vh;
}

.title {
  font-family: 'Luckiest Guy', sans-serif;
  color: white;
  margin: 0 10px;
  text-align: center;
}

.not-good-btn {
  flex-wrap: wrap;
  margin: auto;
}

.not-good {
  font-family: 'Luckiest Guy', sans-serif;
  color: white;
  margin-top: 15px;
  font-size: 13px;
}

.aw-logo:active {
  transform: translateY(0.25rem);
}

.logo:active {
  transform: translateY(0.25rem);
}

.rating-label {
  color: white;
  font-family: 'Luckiest Guy', sans-serif;
}

.rating-bar {
  margin-bottom: 15px;
}

.score {
  width: 171px;
}

.data {
  color: white;
  font-family: 'Luckiest Guy', sans-serif;
}

datalist {
  display: contents;
}

datalist > option {
  display: inline;
}

.synopsis {
  color: white;
  margin: 19px auto;
  width: 90%;
  font-family: 'PT sans', sans-serif;
}

.watch-list-container {
  background-color: #4d4d4d;
  margin: 15px auto;
  width: 90%;
  border-radius: 5px;
}

.list-header {
  color: #4d4d4d;
  font-family: 'Luckiest Guy', sans-serif;
  margin-top: 10px;
  font-size: 24px;
}

.list-row {
  flex-wrap: wrap;
}

.list-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.list-img {
  width: 40%;
  margin: 10px 10px 0 10px;
  border-radius: 5px;
}

.h4 {
  margin-top: 10px;
  margin-left: 5px;
  color: white;
  font-family: 'Luckiest Guy', sans-serif;
}

.watch-list-desktop,
.watch-list-mobile {
  font-size: 24px;
  text-decoration: none;
  transition: 0.1s;
}

.watch-list-desktop:active,
.watch-list-mobile:active {
  transform: translateY(0.25rem);
  color: #cceabb;
}

.watch-list-desktop:visited,
.watch-list-mobile:visited {
  text-decoration: none;
  color: #6f6f6f;
}

.trash {
  height: 3rem;
  margin-top: 10px;
  transition: 200ms;
}

.modal {
  position: fixed;
  margin: auto;
  background-color: #c4c4c4;
  font-family: 'Luckiest Guy', sans-serif;
  top: 200px;
  padding: 30px;
  border-radius: 5px;
}

.modal-background {
  position: fixed;
  background: black;
  opacity: 0.8;
  width: 100%;
  height: 100vh;
}

.left-10 {
  margin-left: 10px;
}

.right-10 {
  margin-right: 10px;
}

.modal-text {
  margin-bottom: 30px;
}

.opacity {
  opacity: 0.8;
}

.modal-buttons {
  font-family: 'Luckiest Guy', sans-serif;
  background-color: #cceabb;
  color: black;
  padding: 10px 25px;
  border-radius: 3px;
  border: none;
  font-size: 11px;
}

.no-anime {
  flex-direction: column-reverse;
  text-align: center;
}

.button {
  transition: 0.1s;
}

.button:active {
  transform: translateY(0.15rem);
  background-color: #a0a0a0;
  color: #cceabb;
}

.pointer {
  cursor: pointer;
}

.lds-heart {
  display: inline-block;
  width: 80px;
  height: 80px;
  transform: rotate(45deg);
  transform-origin: 40px 40px;
}

.lds-heart div {
  top: 32px;
  left: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  background: #dfc;
  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
}

.lds-heart div::after,
.lds-heart div::before {
  content: " ";
  position: absolute;
  display: block;
  width: 32px;
  height: 32px;
  background: #dfc;
}

.lds-heart div::before {
  left: -24px;
  border-radius: 50% 0 0 50%;
}

.lds-heart div::after {
  top: -24px;
  border-radius: 50% 50% 0 0;
}

@keyframes lds-heart {
  0% {
    transform: scale(0.95);
  }

  5% {
    transform: scale(1.1);
  }

  39% {
    transform: scale(0.85);
  }

  45% {
    transform: scale(1);
  }

  60% {
    transform: scale(0.95);
  }

  100% {
    transform: scale(0.9);
  }
}

.hiding {
  display: none;
}

.empty-results {
  color: white;
  z-index: 3;
  font-family: 'Luckiest Guy', sans-serif;
}

.lost {
  color: white;
  font-family: 'Luckiest Guy', sans-serif;
  z-index: 3;
}

.lost-h2 {
  text-align: center;
  width: 80%;
}

